# RAGnarok

./: README.md  Routes.md  package-lock.json
client/: README.md  (+4 more)
python_server/: README.md  api_test.py  app.py  config.py  docs.md  ingestion_worker.py  pyproject.toml  run_server.py
python_server/api/: chat.py  documents.py
python_server/api_client/: api_client.py
python_server/api_memory_langchain/: chat_memory_langchain.py
python_server/api_normal/: chat_normal.py
python_server/datasets/: conversion.ipynb
python_server/datasets/audio/: a (1).m3u8  a (3).m3u8  a (4).m3u8  a (5).m3u8  a (7).m3u8  a.m3u8  download.m3u8
python_server/datasets/ocr_texts/: NIT MEGHALAYA AR 2016-17 ENGLISH_page1.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page10.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page100.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page101.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page102.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page103.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page104.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page105.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page106.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page107.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page108.txt  NIT MEGHALAYA AR 2016-17 ENGLISH_page109.txt  (+604 more)
python_server/models/: audio_ingestor.py  chat_memory.py  confidence_scorer.py  document_ingestor.py  document_ingestor_hybrid.py  document_ingestor_timestamp.py  embedding_service.py  enhanced_retriever.py  hallucination_detector.py  hybrid_embedding_service.py  llm_grounding.py  retriever.py  safe_llm_grounding.py  vector_store.py
python_server/utils/: sanitizer.py
(+110 files in other folders)
